src/objects/Applicant__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applicants</relationshipLabel>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_address__c</fullName>
        <label>Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Interview_Time__c</fullName>
        <label>Interview Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Listed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Over due</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Applicants</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>mylookup__c</fullName>
        <formula>IF(1=2, &apos;hi&apos; , &apos;v/a03/o&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>mylookup</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testDecimalText__c</fullName>
        <formula>IF(
      testDecimal__c  &gt;= 1000000,
      TEXT(FLOOR( testDecimal__c  / 1000000)) &amp; &quot;,&quot;,
      &quot;&quot;) &amp;
    IF(
      testDecimal__c &gt;= 1000,
      RIGHT(TEXT(FLOOR(testDecimal__c  / 1000)), 3) &amp; &quot;,&quot;,
      &quot;&quot;) &amp;
    RIGHT(TEXT(FLOOR(testDecimal__c )), 3) &amp; &quot;.&quot; &amp;
    IF(
      MOD(testDecimal__c  , 1) * 100 &lt; 10,
      &quot;0&quot; &amp; TEXT(ROUND(MOD(testDecimal__c  , 1), 2) * 100),
      TEXT(MIN(ROUND(MOD(testDecimal__c  , 1), 2) * 100, 99))
    )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>testDecimalText</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>testDecimal__c</fullName>
        <defaultValue>0</defaultValue>
        <label>testDecimal</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Applicant</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Status__c</columns>
        <columns>Email_address__c</columns>
        <columns>Interview_Time__c</columns>
        <columns>Manager_Email__c</columns>
        <columns>User__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>mylookup__c</field>
            <operation>equals</operation>
            <value>/a03/o</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>APP-{0000}</displayFormat>
        <label>Applicant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applicants</pluralLabel>
    <recordTypes>
        <fullName>Restricted_Applicant_View</fullName>
        <active>true</active>
        <label>Restricted Applicant View</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>